--- a/views/add.ejs
+++ b/views/add.ejs
@@ -13,7 +13,11 @@
         border-collapse: collapse;
     }
 
+    tr:hover {
+        background-color: bisque;
+    }
     th {
+        background-color: #ff901e;
         border: 1px solid #000000;
     }
 
@@ -21,7 +25,6 @@
         border: 1px solid #000000;
     }
 
-    div {}
 </style>
 
 <body>
